--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator">
+            <div class="display">
+                <p class="input">1234567890</p>
+            </div>
+            <div class="button-container">
+                <button class="clear">AC</button>
+                <button class="clear">C</button>
+                <button class="percent">%</button>
+                <button class="operator">÷</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">x</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">-</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">+</button>
+                <button class="sign">+/-</button>
+                <button class="number">0</button>
+                <button class="decimal">.</button>
+                <button class="equals">=</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
