--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
     <div class="container">
         <div class="calculator">
             <div class="display">
-                <p class="input">1234567890</p>
+                <p class="history"></p>
+                <p class="input"></p>
             </div>
             <div class="button-container">
-                <button class="clear">AC</button>
-                <button class="clear">C</button>
-                <button class="percent">%</button>
-                <button class="operator">÷</button>
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>
-                <button class="operator">x</button>
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="operator">-</button>
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="operator">+</button>
-                <button class="sign">+/-</button>
-                <button class="number">0</button>
-                <button class="decimal">.</button>
-                <button class="equals">=</button>
+                <button class="clear" id="allClear">AC</button>
+                <button class="clear" id="clear">C</button>
+                <button class="operator" id="mod">%</button>
+                <button class="operator" id="divide">÷</button>
+                <button class="number" id="seven">7</button>
+                <button class="number" id="eight">8</button>
+                <button class="number" id="nine">9</button>
+                <button class="operator" id="multiply">x</button>
+                <button class="number" id="four">4</button>
+                <button class="number" id="five">5</button>
+                <button class="number" id="six">6</button>
+                <button class="operator" id="subtract">-</button>
+                <button class="number" id="one">1</button>
+                <button class="number" id="two">2</button>
+                <button class="number" id="three">3</button>
+                <button class="operator" id="plus">+</button>
+                <button class="sign" id="sign">+/-</button>
+                <button class="number" id="zero">0</button>
+                <button class="decimal" id="decimal">.</button>
+                <button class="operator" id="equals">=</button>
             </div>
         </div>
     </div>
